@@ -208,6 +208,16 @@
             </div>
         </div>
 
+        <h3>Find elements with index</h3>
+
+        <ol id="indexed-elements">
+            <li class="indexed">One</li>
+            <li class="indexed">Two</li>
+            <li class="indexed">Three</li>
+            <li class="indexed">Four</li>
+            <li class="indexed">Five</li>
+        </ol>
+
         <h3>Operate on multiple elements</h3>
         <div id="operate-multiple-elements">
             <div>
